Use G1GC