@@ -173,9 +173,10 @@ if (moduleInfoPresent) {
         inputs.property("moduleName", moduleName)
         doFirst {
             jvmArgs = [
-                    '-XX:+UseSerialGC',
+                    '-XX:+UseG1GC',
                     '-Dguice_bytecode_gen_option=DISABLED',
-                    '-XX:MinHeapFreeRatio=10', '-XX:MaxHeapFreeRatio=15',
+                    '-XX:MinHeapFreeRatio=2', '-XX:MaxHeapFreeRatio=15', '-XX:SoftMaxHeapSize=512M',
+                    '-XX:G1PeriodicGCSystemLoadThreshold=0', '-XX:G1PeriodicGCInterval=7000', '-XX:-G1PeriodicGCInvokesConcurrent',
                     '--module-path', classpath.asPath,
                     '--class-path', classpath.asPath,
                     '--module', moduleName,
@@ -187,8 +188,9 @@ if (moduleInfoPresent) {
     run {
         doFirst {
             jvmArgs = [
-                    '-XX:+UseSerialGC',
-                    '-XX:MinHeapFreeRatio=10', '-XX:MaxHeapFreeRatio=15',
+                    '-XX:+UseG1GC',
+                    '-XX:MinHeapFreeRatio=2', '-XX:MaxHeapFreeRatio=15', '-XX:SoftMaxHeapSize=512M',
+                    '-XX:G1PeriodicGCSystemLoadThreshold=0', '-XX:G1PeriodicGCInterval=7000', '-XX:-G1PeriodicGCInvokesConcurrent',
                     '--module-path', "${javafxSdkLibDir}",
                     '--add-modules', 'javafx.base,javafx.fxml,javafx.graphics,javafx.controls',
             ]
@@ -202,9 +204,10 @@ tasks.register('runExtract', JavaExec) {
     group = 'tqrespec'
 
     jvmArgs = [
-            '-XX:+UseZGC',
+            '-XX:+UseG1GC',
             '-Dguice_bytecode_gen_option=DISABLED',
-            '-XX:MinHeapFreeRatio=10', '-XX:MaxHeapFreeRatio=15',
+            '-XX:MinHeapFreeRatio=2', '-XX:MaxHeapFreeRatio=15', '-XX:SoftMaxHeapSize=1024M',
+            '-XX:G1PeriodicGCSystemLoadThreshold=0', '-XX:G1PeriodicGCInterval=10000', '-XX:-G1PeriodicGCInvokesConcurrent',
             '--module-path', run.classpath.asPath
     ] as List<String>
     mainModule = "${moduleName}/dev.pinter.tqextract.Cli"
@@ -359,15 +362,14 @@ tasks.register('appimage') {
         def tqextractLauncher = File.createTempFile("tqextractlauncher", ".properties", file(layout.buildDirectory))
         tqextractLauncher.write("module=${moduleName}/dev.pinter.tqextract.Cli" + System.lineSeparator())
         tqextractLauncher.append("java-options=-XX:+UseG1GC -XX:G1PeriodicGCInterval=10000 -XX:SoftMaxHeapSize=1024M" +
-                " -XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=10" +
+                " -XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=15 -XX:G1PeriodicGCSystemLoadThreshold=0" +
                 " -Dguice_bytecode_gen_option=DISABLED" + System.lineSeparator())
 
         def texconverterLauncher = File.createTempFile("texconverterlauncher", ".properties", file(layout.buildDirectory))
         texconverterLauncher.write("module=${moduleName}/dev.pinter.tqextract.TexConverterCli" + System.lineSeparator())
         texconverterLauncher.append("java-options=-XX:+UseG1GC -XX:G1PeriodicGCInterval=10000 -XX:SoftMaxHeapSize=1024M" +
-                " -XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=10" +
+                " -XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=15 -XX:G1PeriodicGCSystemLoadThreshold=0" +
                 " -Dguice_bytecode_gen_option=DISABLED" + System.lineSeparator())
-
 
         if (OS.isWindows()) {
             tqextractLauncher.append("win-console=true" + System.lineSeparator())
@@ -393,9 +395,10 @@ tasks.register('appimage') {
                         '--add-launcher', "tqextract-cli=${tqextractLauncher.absolutePath}",
                         '--add-launcher', "texconverter-cli=${texconverterLauncher.absolutePath}",
                         '--java-options',
-                        '-XX:+UseSerialGC ' +
+                        '-XX:+UseG1GC ' +
                                 '-Dguice_bytecode_gen_option=DISABLED ' +
-                                '-XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=15 '
+                                '-XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=15 -XX:SoftMaxHeapSize=512M ' +
+                                '-XX:G1PeriodicGCSystemLoadThreshold=0 -XX:G1PeriodicGCInterval=7000 -XX:-G1PeriodicGCInvokesConcurrent'
             } else {
                 commandLine binjpackage,
                         '--type', 'app-image',
@@ -411,11 +414,12 @@ tasks.register('appimage') {
                         '--main-jar', jar.outputs.files.collect { it.getName() }.get(0),
                         '--main-class', $ { application.mainClass.get() },
                         '--java-options',
-                        '-XX:+UseSerialGC ' +
+                        '-XX:+UseG1GC ' +
                                 '-Dguice_bytecode_gen_option=DISABLED ' +
-                                '-XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=15 ' +
+                                '-XX:MinHeapFreeRatio=2 -XX:MaxHeapFreeRatio=15 -XX:SoftMaxHeapSize=512M ' +
+                                '-XX:G1PeriodicGCSystemLoadThreshold=0 -XX:G1PeriodicGCInterval=7000 -XX:-G1PeriodicGCInvokesConcurrent' +
                                 '--add-opens javafx.base/com.sun.javafx.reflect=ALL-UNNAMED ' +
-                                '--add-opens java.base/java.lang=ALL-UNNAMED '
+                                '--add-opens java.base/java.lang=ALL-UNNAMED'
             }
         }
 
